--- a/gridfs.html
+++ b/gridfs.html
@@ -1,2 +1,3 @@
+<script>
 /*The technology stack was pretty simple, Nginx serving us on the front of the battle field and passing some of the requests
 to the node.js web server.
