--- a/gridfs.html
+++ b/gridfs.html
@@ -3,7 +3,6 @@
 /*The technology stack was pretty simple, Nginx serving us on the front of the battle field and passing some of the requests
 to the node.js web server.
 */
-/*The technology stack was pretty simple, Nginx serving us on the front of the battle field and passing some of the requests
-to the node.js web server.
+/*The technology stack was pretty simple, Nginx serving us on the front of the battle field and 
 */
 </script>
