--- a/gridfs.html
+++ b/gridfs.html
@@ -4,7 +4,8 @@
 to the node.js web server.
 */
 /*The technology stack was pretty simple, Nginx serving us on the front of the battle field and passing some of the 
-
+/*The technology stack was pretty simple, Nginx serving us on the front of the battle field and passing some of the requests
+to the node.js web server.
 requests
 to the node.js web server.
 */
